--- a/Airline/app/src/main/AndroidManifest.xml
+++ b/Airline/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MakeReservationActivity"></activity>
+        <activity android:name=".LogInActivity"></activity>
+        <activity android:name=".MakeReservationActivity" />
         <activity android:name=".CreateAccountActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
